# sheaf-nma

./: .gitignore  E156-PROTOCOL.md  README.md  generate_figures.py  index.html  push.sh  pyproject.toml  review-findings.md  sheaf_nma.html
analysis/: generate_figures_v2.py  power_simulation.py  run_real_corpus.py
corpus/: README.md  export_netmeta.R
corpus/data/: Baker2009.csv  Dogliotti2014.csv  Dong2013.csv  Franchini2012.csv  Gurusamy2011.csv  Linde2015.csv  Linde2016.csv  Senn2013.csv  Stowe2010.csv  Woods2010.csv  _manifest.json  dietaryfat.csv  parkinson.csv  smokingcessation.csv
docs/: protocol.md
docs/superpowers/plans/: 2026-03-26-sheaf-nma-implementation.md  2026-05-12-sheafnma-v0.2-implementation.md
docs/superpowers/specs/: 2026-03-26-sheaf-nma-design.md  2026-05-12-sheafnma-v0.2-real-corpus-validation-design.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
e156-submission/assets/: index.html  sheaf_nma.html
paper/: cover_letter.md  manuscript.md  methods_note.md  sheaf_nma_manuscript.md  sheafnma_v2.md
sheafnma/: __init__.py  comparators.py  core.py  io.py  r_bridge.py  simulate.py
tests/: test_comparators.py  test_core.py  test_io.py  test_r_bridge.py  test_reproducibility.py  test_simulate.py
